syntax = "proto3";
package didcomm;

import "common/messages.proto";

option go_package = "didcomm/doorman/api";

service Doorman {
  rpc GetInvitation (common.InvitationRequest) returns (common.InvitationResponse) {}
  rpc AcceptInvitation (common.AcceptInvitationRequest) returns (common.AcceptInvitationResponse) {}
}